[workspace]
package.version = "0.2.0"
package.edition = "2021"
package.documentation = "https://docs.rs/reqwest_enum"
package.authors = ["Tao Xu <hewig@duck.com>"]
package.readme = "README.md"
package.license = "MIT OR Apache-2.0"
members = ["reqwest-enum", "examples/ethereum-rpc"]

resolver = "2"

[workspace.dependencies]
reqwest-enum = { path = "./reqwest-enum" }
reqwest = { version = "^0.12.0", features = ["json"] }

serde = { version = "^1.0.0", features = ["derive"] }
serde_json = "^1.0.0"

futures = "^0.3.0"
tokio-test = "0.4.2"
