[package]
name = "reqwest-enum"
description = "Typed enum HTTP API for reqwest."
keywords = ["request", "enum"]
categories = ["web-programming::http-client"]
repository = "https://github.com/hewigovens/reqwest-enum"
documentation = "https://docs.rs/reqwest_enum"
authors = ["Tao Xu <hewig@duck.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["jsonrpc"]
jsonrpc = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
