[package]
name = "reqwest-enum"
description = "Typed enum HTTP API for reqwest."
keywords = ["request", "enum"]
categories = ["web-programming::http-client"]
repository = "https://github.com/hewigovens/reqwest-enum"
documentation = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["jsonrpc"]
jsonrpc = []

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
