[package]
name = "reqwest-enum"
description = "Typed enum HTTP API for reqwest."
keywords = ["request", "enum"]
categories = ["web-programming::http-client"]
repository = "https://github.com/hewigovens/reqwest-enum"
documentation = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[features]
default = ["jsonrpc"]
jsonrpc = ["dep:futures"]
middleware = ["dep:reqwest-middleware"]

[dependencies]
thiserror = "2.0.12"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true, optional = true }
reqwest-middleware = { version = "0.4.2", optional = true }

[dev-dependencies]
tokio = { workspace = true }
