[package]
name = "ethereum-rpc"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
reqwest-enum = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.2"
