[package]
name = "ethereum-rpc"
edition = { workspace = true }
version = { workspace = true }

[dependencies]
tokio = { version = "1.43.1", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
reqwest-enum = { workspace = true, features = ["jsonrpc"] }

[dev-dependencies]
tokio-test = { workspace = true }
